# mcp-security-lab

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.agents/: AGENTS.md  CATALOG.md  tools.yaml
.github/: dependabot.yml
config/: mcp_server_registry.yaml
decisions/: .spec-check-allowlist.yaml  DEC-MCPSEC-001-config-scan-before-runtime.md  DEC-MCPSEC-002-policy-corpus-over-llm-judge.md  DEC-MCPSEC-003-json-and-markdown-report-shapes.md  DEC-MCPSEC-004-install-cdcp-governance.md  DEC-MCPSEC-005-policy-evaluation-over-score-only-warnings.md  DEC-MCPSEC-006-baseline-current-diff-gate.md  DEC-MCPSEC-007-athena-mcp-surface-drift-gate.md  DEC-MCPSEC-008-mcp-server-agnostic-drift-gate.md  DEC-MCPSEC-009-systems-thinking-discipline-adoption.md  README.md
dreams/: README.md
examples/: claude-desktop-config.json  remote-unauthenticated-server.json  risky-filesystem-shell-server.json  safe-readonly-server.json
mcp_security_lab/: __init__.py  cli.py  config.py  diff.py  injection.py  policy.py  report.py  scoring.py
ops/: RELEASE_LEDGER.md  RESET_LEDGER.md
schemas/: mcp-surface-diff.schema.json
scripts/: check_no_bom.py  check_schema_cache_freshness.py  spec_check.py  validate_athena_mcp_surface.py  validate_decisions.py  validate_dreams.py  validate_mcp_surface.py  validate_policies.py  validate_roles.py  validate_sensitive_disclosures.py  validate_skills.py  validate_tools.py  voice_lint.py
specs/: README.md
tests/: test_cli_show.py  test_diff.py  test_injection_corpus.py  test_loader.py  test_policy.py  (+5 more)
(+63 files in other folders)
