[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-lab"
version = "0.1.0"
description = "Static MCP server config risk scanner and policy report generator."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AthenaTheOwl"}]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "jsonschema>=4.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_security_lab*"]
